# ulee-jax

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ulee_repo/DIAYN/: config.py  data_collection_and_updates.py  main_loop.py  setups.py
src/ulee_repo/PPO/: config.py  data_collection_and_updates.py  main_loop.py  setups.py
src/ulee_repo/RL2/: config.py  data_collection_and_updates.py  main_loop.py  setups.py
src/ulee_repo/RND/: config.py  data_collection_and_updates.py  main_loop.py  normalization_utils.py  ppo_update.py  rnd_target_and_predictor_networks.py  rnd_transformer_actor_critic.py  run_training.ipynb  setups.py
src/ulee_repo/ULEE/: config.py  data_collection_and_updates.py  goal_judge.py  goal_sample.py  goal_search.py  main_loop.py  setups.py  utils.py
src/ulee_repo/evaluations/: diayn_evals.py  meta_learner_evals.py  rollouts.py  rollouts_on_trained.py
src/ulee_repo/experiments/: paths.py  run_evaluations.ipynb  run_training.ipynb
src/ulee_repo/networks/: diayn_discriminator.py  diayn_transformer_actor_critic.py  goal_difficulty_predictor.py  tile_embedding.py  transformer_actor_critic.py  transformer_xl_base.py
src/ulee_repo/shared_code/: logging.py  ppo_update.py  trainsition_objects.py  wrappers.py
